[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openhexa.sdk"
version = "2.13.0"
description = "OpenHEXA SDK"

authors = [{ name = "Bluesquare", email = "dev@bluesquarehub.com" }]
maintainers = [{ name = "Bluesquare", email = "dev@bluesquarehub.com" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11,<3.15" # the main constraint for supported Python versions is the multiprocess library
dependencies = [
    "urllib3<3",
    "multiprocess~=0.70.15",
    "requests>=2.31,<2.33",
    "PyYAML~=6.0",
    "click~=8.1.3",
    "jinja2>3,<4",
    "docker>=7",
    "graphql-core>3,<4",
    "ariadne-codegen>=0.14.0,<1"
]

[project.scripts]
openhexa = "openhexa.cli:app"
ariadne-codegen = "ariadne_codegen.main:main"

[tool.ariadne-codegen]
schema_path = "openhexa/graphql/schema.generated.graphql"
queries_path = "openhexa/graphql/queries.graphql"
target_package_path = "openhexa/graphql"
async_client = false
plugins = ["ariadne_codegen.contrib.shorter_results.ShorterResultsPlugin"]

[project.optional-dependencies]
dev = [
    "ruff>=0.13.0,<0.14.0",
    "pytest>=8.3,<9",
    "build>=1.3,<2",
    "pytest-cov>=7,<8",
    "pre-commit",
    "httmock",
]
examples = [
    "geopandas>=1.1.0,<1.2.0",
    "pandas>=2.3,<2.4",
    "rasterio~=1.4.1",
    "rasterstats>=0.20,<0.21",
    "setuptools>=80.9.0,<80.10.0",
    "SQLAlchemy~=2.0.9",
    "psycopg2",
]


[tool.setuptools.packages.find]
where = ["."]
namespaces = true


[project.urls]
"Homepage" = "https://github.com/blsq/openhexa-sdk-python"
"Bug Tracker" = "https://github.com/blsq/openhexa-sdk-python/issues"


[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 120
ignore = ["E501"]
exclude = ["openhexa/graphql/graphql_client"]
per-file-ignores = { "tests/**/test_*.py" = ["D100","D101","D102", "D103"] } # Ignore missing docstrings in tests

[tool.ruff.lint]
extend-select = [
    "D",   # pydocstyle
    "I",   # isort
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
]
# Disable all "missing docstrings" and "missing type annotations" rules for now
# TODO: enable
ignore = [
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN101",
    "ANN102",
    "ANN201",
    "ANN202",
    "ANN204",
    "ANN205",
    "ANN401"
]

[tool.ruff.pycodestyle]
max-doc-length = 120


[tool.ruff.lint.pydocstyle]
convention = "numpy" # Accepts: "google", "numpy", or "pep257".


[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
]
