[metadata]
name = openhexa.sdk
version = attr: openhexa.sdk.__version__
author = Bluesquare
author_email = dev@bluesquarehub.com
url = https://github.com/BLSQ/openhexa-sdk-python
description = OpenHexa SDK
long_description = file: README.md
long_description_content_type = text/markdown
keywords = openhexa, pipelines
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    multiprocess
    stringcase
    PyYAML

[options.extras_require]
dev = pytest;pytest-cov;pre-commit;build
examples = geopandas;pandas;rasterio;requests;rasterstats;SQLAlchemy;psycopg2

[options.package_data]
* = README.md

