[metadata]
name = openhexa.sdk
version = attr: openhexa.sdk.__version__
author = Bluesquare
author_email = dev@bluesquarehub.com
url = https://github.com/BLSQ/openhexa-sdk-python
description = OpenHexa SDK
long_description = file: README.md
long_description_content_type = text/markdown
keywords = openhexa, pipelines
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
python_requires = >=3.9
packages = find_namespace:
zip_safe = True
include_package_data = True
install_requires =
    click
    multiprocess
    requests
    stringcase
    PyYAML

[options.packages.find]
where = .
include = openhexa*
namespaces = true

[options.extras_require]
dev = pytest;pytest-cov;pre-commit;build
examples = geopandas;pandas;rasterio;requests;rasterstats;SQLAlchemy;psycopg2

[options.package_data]
* = README.md
openhexa.cli = skeleton/*, skeleton/.gitignore

[options.entry_points]
console_scripts =
    openhexa = openhexa.cli:app

[flake8]
ignore = W293, E501, W503, F841, E203
max-line-length = 120
per-file-ignores =
    # imported but unused
    __init__.py: F401

